--- a/html/index.html
+++ b/html/index.html
@@ -10,11 +10,11 @@
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous"></script>
     <script defer src="/js/app.js"></script>
-    <title>NASA</title>
+    <title>NASA / The Planet Earth</title>
 </head>
 <body>
     <header>
-        <h1>NASA</h1>
+        <h1>The Planet Earth</h1>
     </header>
     <main>
     <div class="blahblahblah"
