--- a/html/index.html
+++ b/html/index.html
@@ -4,21 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <script
-  src="https://code.jquery.com/jquery-3.6.0.js"
-  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-  crossorigin="anonymous"></script>
-    <script defer src="/js/app.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" ></script>
+    <script defer src="js/app.js"></script>
     <title>NASA / The Planet Earth</title>
 </head>
 <body>
-    <header>
-        <h1>The Planet Earth</h1>
-    </header>
-    <main>
-    <div class="blahblahblah"
-    ></div>
-    </main>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-dark justify-content-center">
+    <h2 class="text-white ">The Planet Earth</h2>
+</nav>
+<div class="container mt-3  ">
+    <div class="row">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-body">
+                    <form action="" method="POST" id="img-form">
+                    <div class="row">
+                            <div class="form-group col-lg-5">
+                                <label for="form">From:</label>
+                                <input required type="date" id="form" class="form-control">
+                            </div>
+                            <div class="form-group  col-lg-5">
+                                <label for="to">To:</label>
+                                <input required type="date" id="to" class="form-control">
+                            </div>
+                            <div class="form-group col-lg-2">
+                                <button class="btn btn-success">Show</button>
+                            </div>
+                        </div>
+                    </form>
+                    <div class="row mt-3 image">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
